fix burger menu on tablet res, component page

--- a/09-lection7/01-burger-menu/burger-menu.css
+++ b/09-lection7/01-burger-menu/burger-menu.css
@@ -31,7 +31,7 @@
   margin-top: 16px;
   display: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .burgerMenu {
     position: fixed;
     display: block;
@@ -41,6 +41,7 @@
     background: var(--bg-color, var(--grey-0, #f9fafc));
     transform: translateX(-100vw);
     transition: transform 0.25s linear;
+    z-index: 1;
   }
   .burgerMenu_noTopSeparator {
     padding-top: 80px;
@@ -50,8 +51,7 @@
   }
   .burgerMenu[data-open] {
     transform: translateX(0);
-  }
-  
+  }  
   .burgerMenu__content {
     padding: 0 16px;
     overflow: auto;
